# battle

./: .gitignore  README.md  dummy.py  example_drivers.py  player.py  pongbot.py  radarbot.py  requirements.txt  robots.py  runner.py  setup.cfg  stillbot.py  util.py
battle/: arena.py  chillbot.py  persistence.py  player.py  pongbot.py  radarbot.py  robots.py  runner.py  stillbot.py  util.py
battle/static/: arena.js
battle/templates/: index.html.j2
site/: arena.js  index.html
static/: arena.js
templates/: index.html.j2
