[metadata]
name = battle
version = 0.1.0
license = MIT
author = Sasha Case
description = A robot programming game which allows programming a virtual spaceship robot driver with simple commands to fight a battle against other players.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/atcase/robots
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Education
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Education
    Topic :: Games/Entertainment
    Topic :: Games/Entertainment :: Simulation
    Typing :: Typed


[options]
packages = battle
install_requires =
    websocket-client>=1.3.1
    aiohttp>=3.8.1
    aiohttp-jinja2>=1.5
    Jinja2>=3.0.3

[options.entry_points]
console_scripts =
    battle-runner = battle.runner:main
    battle-pongbot = battle.pongbot:main
    battle-radarbot = battle.radarbot:main
    battle-stillbot = battle.stillbot:main

[options.package_data]
battle =
    static/**/*
    templates/*

[mypy]
python_version = 3.7

[mypy-websocket]
ignore_missing_imports = True
